Skip to content

Http interface: assertion failed in VLM when starting a stream

Reproduce:

  • build with assertions
  • open "manage stream"
  • add a new stream with default parameter and random name
  • click on the "play" button of the newly created stream

The following assertion is raised.

vlc: ../../src/input/vlm.c:106: player_on_state_changed: Assertion `psz_instance_name' failed.
Edited by Alexandre Janniaux
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information