vlm: remove wrong assertion

The vlm instance name may be NULL. The documentation (doc/vlm.txt)
states that the "instance_name" parameter is optional.

Fixes #23211

Signed-off-by: Alexandre Janniaux <ajanni@videolabs.io>